--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,16 @@
 group 'com.chenleon'
 version '1.0-SNAPSHOT'
 
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.4'
+    }
+}
+
+apply plugin: 'com.github.johnrengelman.shadow'
 apply plugin: 'java'
 apply plugin: 'idea'
 
@@ -13,4 +23,10 @@ repositories {
 dependencies {
     compile 'edu.princeton.cs:algs4:1.0.3'
     testCompile group: 'junit', name: 'junit', version: '4.11'
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.chenleon.sort.SortCompare'
+    }
 }
