--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'com.chenleon.sort.SortCompare'
+//        attributes 'Main-Class': 'com.chenleon.sort.SortCompare'
+    attributes 'Main-Class': 'com.chenleon.pattern.FastCollinearPoints'
     }
 }
